# qml-sample-project

./: CMakeLists.txt  README.md
imports/: Main.qml  Measure.qml  SettingsPane.qml  Theme.qml  qml.qrc  qmldir
include/linear_stage/: linear_stage.hpp
src/: linear_stage.cpp  main.cpp
